@@ -649,8 +649,10 @@ int UpnpFinish(void)
 		UpnpUnRegisterClient(client_handle);
 #endif
 	TimerThreadShutdown(&gTimerThread);
-#if EXCLUDE_WEB_SERVER == 0
+#if EXCLUDE_MINISERVER == 0
 	StopMiniServer();
+#endif
+#if EXCLUDE_WEB_SERVER == 0
 	web_server_destroy();
 #endif
 	ThreadPoolShutdown(&gMiniServerThreadPool);
@@ -4084,7 +4086,7 @@ void UpnpRemoveAllVirtualDirs(void)
 
 int UpnpEnableWebserver(int enable)
 {
-    int retVal;
+    int retVal = UPNP_E_SUCCESS;
 
     if( UpnpSdkInit != 1 ) {
         return UPNP_E_FINISH;
@@ -4107,10 +4109,10 @@ int UpnpEnableWebserver(int enable)
             break;
 #endif /* INTERNAL_WEB_SERVER */
         default:
-            return UPNP_E_INVALID_PARAM;
+            retVal = UPNP_E_INVALID_PARAM;
     }
 
-    return UPNP_E_SUCCESS;
+    return retVal;
 }
 
 
